# march_madness

./: .gitignore  Cargo.toml  README.md  bracket_keys_2026.json  brackets.txt  visualize.py  winning_bracket.txt  winning_bracket_2025.txt  winning_bracket_template.txt
src/: main.rs
