[package]
name = "march_madness"
version = "1.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.3"
rand = "0.10.0"
rand_distr = "0.6.0"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
sysinfo = "0.38.3"
rayon = "1.10"
